update hover effect on layer styles and align arrow - fix issue issues/204 -204

--- a/src/components/LayerSubtitle/layerSubtitle.scss
+++ b/src/components/LayerSubtitle/layerSubtitle.scss
@@ -21,16 +21,23 @@
     }
 }
 
+%layer-center-element {
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .layer-item {
     border-bottom: 1px solid #ced1d6;
     clear: right;
 
     &-header {
         padding: 15px;
+        background-color: $layer-list-header-background;
 
         &--icon {
-            color: $layer-list-icon-color;
+            color: $layer-list-header-text-color;
             font-size: 24px;
+            @extend %layer-center-element;
 
             &.chevron {
                 @extend .fa-chevron-right;
@@ -39,18 +46,20 @@
 
         &--title {
             color: $layer-list-primary-text-color;
-            display: inline-block;
             font-size: 12px;
             margin-left: 5px;
             width: 90%;
+            @extend %layer-center-element;
+
         }
 
         &--caption {
-            color: $layer-list-secondary-text-color;
+            color: $layer-list-header-caption-text-color;
             display: block;
             font-size: 13px;
         }
     }
+
 
     &-body {
         position: relative;
@@ -125,9 +134,9 @@
 
     }
 
-    &.selected {
 
-        background: #f2f2f2;
+
+    &.selected {
 
         .layer-item-header {
             background-color: $layer-list-header-background-contrast;
@@ -147,6 +156,7 @@
             &--caption {
                 color: $layer-list-secondary-text-color-contrast;
             }
+
         }
 
         .layer-item-more-info {
